components/app-core/frontend/src/view/navbar/navbar.scss
@import "avatar/avatar";

$main-nav-background-color: #444 !default;
$main-nav-item-height: 52px !default;
$user-avatar-size: $page-header-height !default;
$user-avatar-image-size: 36px !default;
$page-header-active-fg: $brand-primary !default;

$navbar-hover-fg: $white !default;
$navbar-hover-bg: $brand-primary !default;
$navbar-active-fg: $white !default;
$navbar-active-bg: #737373 !default;
$navbar-text-color: $white !default;

$secondary-nav-background-color: #fff !default;
$secondary-nav-hover-color: #ccc !default;
$secondary-nav-underline-size: 4px;
$secondary-nav-bottom-border-color: darken($page-header-bg, 10%) !default;
$secondary-nav-active-color: $brand-primary !default;

$navbar-toggle-button-width: $page-header-height !default;
$navbar-bottom-border-color: $page-header-bg !default;
$navbar-primary-bottom-border-color: lighten($main-nav-background-color, 10%) !default;
$user-menu-hover-color: $brand-primary !default;

@import "navigation/navigation";

nav.secondary-nav {
  color: $page-header-fg;
  padding: 0;
  width: 100%;
  height: $page-header-height;
  min-height: $page-header-height;
  border: 0;
  margin-bottom: 0;
  padding-left: $main-nav-width;
  position: fixed;
  z-index: 1030;
  display: flex;

  &.navbar-icons-only {
    padding-left: $main-nav-icons-width;
  }

  .navbar-toggle-labels {
    background: $navbar-bottom-border-color;
    flex: 0 0 $navbar-toggle-button-width;
    top: 0;
    left: 0;
    width: $navbar-toggle-button-width;
    text-align: center;
    border-bottom: 1px solid $secondary-nav-bottom-border-color;
    user-select: none;

    > i {
      line-height: $page-header-height;
      padding-left: 0;
      cursor: pointer;

      &:hover {
        color: $page-header-active-fg;
      }
    }
  }
    
  .secondary-navbar {
    flex: 1 1 0;
    background-color: $navbar-bottom-border-color;
    border-bottom: 1px solid $secondary-nav-bottom-border-color;
  }

  .user-avatar {
    background-color: $navbar-bottom-border-color;
    flex: 0;
    align-items: center;
    display: flex;
    padding: 0 $console-unit-space;
    border-bottom: 1px solid $secondary-nav-bottom-border-color;
    padding-top: 1px;

    .action-menu-wrapper .actions-menu ul.actions-menu-list {
      li:not([disabled]):hover {
        background-color: transparent;
        color: $user-menu-hover-color;
      }
    }
  }
}

.nav-item {
  white-space: nowrap;
  vertical-align: middle;
  margin: auto;
  display: flex;
  align-items: center;
  height: $page-header-height;

  &:hover {
    cursor: pointer;
    padding-top: $secondary-nav-underline-size;
    border-bottom: $secondary-nav-underline-size solid $secondary-nav-hover-color;
  }

  > div.nav-item-inner {
    display: flex;
    align-items: center;
    padding: 0 $console-unit-space * 0.5;

    i {
      margin-right: $console-unit-space * 0.25;
    }

    span {
      max-width: 100px;
      overflow-x: hidden;
      text-overflow: ellipsis;
    }

    app-icon {
      display: flex;
    }
  }
}

.dropdown.open .nav-item {
    padding-top: $secondary-nav-underline-size;
    border-bottom: $secondary-nav-underline-size solid $page-header-active-fg;
}

.primary-nav {
  color: $page-header-fg;
  background: $page-header-bg;
  padding: 0;
  width: $main-nav-width;
  height: 100%;
  background-color: $main-nav-background-color;
  z-index: auto;
  display: flex;
  overflow: hidden;
  position: fixed;
  top: 0;
  flex-direction: column;

  .navbar-menu {
    //height: 100%;
    flex: 1 1 0;
    height: auto;
  }

  &.navbar-hidden {
    display: none;
  }

  &.collapse {
    height: 100% !important;
  }

  &.navbar-icons-only {
    width: $main-nav-icons-width;

    .nav.navbar-nav {
      li a .navitem-label {
        display: none;
      }
    }
  }

  .nav-logo {
    width: $main-nav-icons-width;
    height: $page-header-height;
    display: flex;
    align-items: center;
    justify-content: center;
    border-bottom: 1px solid $navbar-primary-bottom-border-color;
    opacity: 0;
    transition: opacity 0.6s linear;

    &.nav-logo-hide {
      opacity: 1;
      transition: opacity 0.4s linear;
    }

    .nav-logo-icon {
      color: $navbar-text-color;
      font-size: 28px;
      vertical-align: middle;
    }

    svg {
      width: 28px;
      height: 28px;
      
      > path {
        fill: $navbar-text-color;
      }
    }
  }

  ul.nav.navbar-nav {
    overflow-x: hidden;
    height: calc(100% - #{$page-header-height});
    margin: 0;

    li {
      height: $main-nav-item-height;
      width: 100%;
      display: flex;

      &.navitem-bottom {
        position: absolute;
        bottom: $console-unit-space * 0.25;
      }

      &:hover {
        color: $navbar-hover-fg;
        background-color: $navbar-hover-bg;
      }

      &.active {
        background-color: $navbar-active-bg;
        color: $navbar-active-fg;
      }

      > a {
        font-size: $main-nav-label-size;
        color: $navbar-text-color;
        background: transparent;
        padding: 0;
        margin: auto 0;
        display: flex;
        align-items: center;
        height: $main-nav-item-height;
        width: 100%;

        &:hover,
        &:focus,
        &.active {
          color: $navbar-text-color;
          background: transparent;
          text-decoration: none;
        }

        &:active {
          box-shadow: none;
        }

        .navitem-icon {
          vertical-align: middle;
          display: inline-block;
          width: $main-nav-icons-width;
          text-align: center;

          > i {
            vertical-align: middle;
            font-size: 24px;
            display: inline-block;
          }

          > svg {
            width: 32px;
            vertical-align: middle;

            .st0 {fill: $navbar-text-color}
	          .st1 {stroke: $navbar-text-color}
          }
        }

        .navitem-label {
          vertical-align: middle;
          font-size: $font-size-nav;
        }
      }

      .menu-item-badge {
        position: absolute;
        left: 32px;
        margin: 6px;
        width: 24px;
        height: 24px;
        background-color: #00b0d7;
        color: $navbar-text-color;
        text-align: center;
        line-height: 24px;
        border-radius: 50%;
        font-size: 14px;
        font-weight: 700;
        pointer-events: none;
        padding: 0;
        opacity: 0;
        transition: opacity 0.6s linear;

        &.badge-active {
          opacity: 1;
        }
      }
    }
  }

  .nav-brand {
    border-bottom: 1px solid $navbar-primary-bottom-border-color;
    height: $page-header-height;
    display: flex;
    align-items: center;
    justify-content: center;
    align-content: center;
    opacity: 0;
    transition: opacity 0.6s linear;
    position: fixed;
    top: 0;

    &.nav-logo-hide {
      opacity: 1;
      transition: opacity 0.4s linear;
    }
  }

  .navbar-brand {
    color: $white;
    font-size: $font-size-large2;
    font-weight: 500;
    padding: 0 $console-unit-space;
    overflow: hidden;
    width: 100%;
    margin-left: 0;
    float: none;
    white-space: nowrap;
    height: auto;
  }
}

@media (min-width: 480px) {
  .navbar-responsive-menu-btn {
    display: none;
  }
}

@media (max-width: 479px) {

  nav.secondary-nav, nav.secondary-nav.navbar-icons-only {
    padding-left: 0;
  }

  #navbar.collapsing {
    display: none;
  }

  navbar > nav.main-nav-menu.navbar-icons-only .nav.navbar-nav li a .navitem-label {
    display: inline-block;
  }

  #navbar {
    display: none;
  }

  .primary-nav .navbar-menu > div {
      display: none;
  }

  #navbar[aria-expanded="true"] {
    display: block;
    position: fixed;
    top: $page-header-height;
    left: 0px;
    width: 100vw;
    margin: 0px;
    z-index: 1030;
    height: auto !important;

    navigation > ul.nav.navbar-nav {
      width: 100%;
      position: relative;
      margin: 0;
      top: 0;
      background-color: $main-nav-background-color;

      .navitem-label {
        display: inline-block;
      }


      li.navitem-bottom {
        position: relative;
        bottom: inherit;
      }
    }
  }

  .navbar-toggle-width {
    display: none;
  }
}

